[package]
name = "firm_delay"
version = "0.6.0"
edition = "2021"
authors = ["Yannick Feld"]
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_pcg = { version = "0.3.1", features = ["serde1"]}
rand = "0.8.5"
rand_distr = "0.4.3"
serde={version="^1.0.196", features = ["derive"] }
serde_json="^1.0.113"
indicatif={version = "^0.17.8", features=["rayon"]}
clap = {version = "^4.5.0", features=["derive", "cargo", "color", "help"]}
rayon="^1.8.1"
sampling = { git = "https://github.com/Pardoxa/sampling.git", rev = "c5dc731ce2b0bb45efe2cec76553e9bdf49cb02d", default-features = false  }
humantime = "2.1.0"
glob = "0.3.1"
rand_xoshiro = "0.6.0"
rand_chacha = "0.3.1"
camino = "1.1.6"
fs-err = "2.11.0"
flate2 = "1.0.28"
kahan = "0.1.4"


[build-dependencies]
chrono = "0.4.34"


[profile.release]
lto = true
strip = true
