[package]
name = "firm_delay"
version = "0.7.0"
edition = "2021"
authors = ["Yannick Feld"]
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_pcg = { version = "0.3.1", features = ["serde1"]}
rand = "0.8.5"
rand_distr = "0.4.3"
serde={version="^1.0.203", features = ["derive"] }
serde_json="^1.0.117"
indicatif={version = "^0.17.8", features=["rayon"]}
clap = {version = "^4.5.7", features=["derive", "cargo", "color", "help"]}
rayon="^1.10.0"
sampling = { git = "https://github.com/Pardoxa/sampling.git", rev = "17efab8de911b2cef4b93f9d7e0a6891366a6178", default-features = false  }
humantime = "2.1.0"
glob = "0.3.1"
rand_xoshiro = "0.6.0"
rand_chacha = "0.3.1"
camino = "1.1.7"
fs-err = "2.11.0"
flate2 = "1.0.30"
kahan = "0.1.4"
itertools = "^0.13.0"
derivative = "^2.2.0"
num-traits = "0.2.19"
num-rational = "0.4.2"
bincode = "1.3.3"
fraction =  { version="0.15.3", features = ["with-serde-support"] }


[build-dependencies]
chrono = "0.4.38"


[profile.release]
lto = true
strip = true
